force-app/main/default/objects/Event_Handler_Route__mdt/Event_Handler_Route__mdt.object-meta.xml
<CustomObject>
    <label>Event Handler Route</label>
    <pluralLabel>Event Handler Routes</pluralLabel>
</CustomObject>