force-app/main/default/objects/Event_Handler_Route__mdt/fields/EvtRunner__c.field-meta.xml
<CustomField>
    <fullName>EvtRunner__c</fullName>
    <label>EvtRunner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EvtApexRunner</fullName>
                <default>true</default>
                <label>EvtApexRunner</label>
            </value>
            <value>
                <fullName>EvtFlowRunner</fullName>
            </value>
            <value>
                <fullName>EvtRecordFlowRunner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>