force-app/main/default/objects/Event_Handler_Route__mdt/fields/Handler_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Api_Name__c</fullName>
    <inlineHelpText>Apex class implementing EvtHandlerInterface</inlineHelpText>
    <label>Handler Api Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>