force-app/main/default/objects/Event_Handler_Route__mdt/fields/Handler_Type__c.field-meta.xml
<CustomField>
    <fullName>Handler_Type__c</fullName>
    <label>Handler Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>